@@ -21,6 +21,7 @@ setup(name=name,
       download_url     = download_url,
       platforms        = platforms,
       keywords         = keywords,
+      py_modules       = ['readline'],
       packages         = ['pyreadline'],
       data_files       = [('doc', glob.glob("doc/*")),
                          ],
