@@ -23,6 +23,7 @@ setup(name=name,
       download_url     = download_url,
       platforms        = platforms,
       keywords         = keywords,
+      py_modules       = ['readline'],
       packages         = ['pyreadline'],
       package_data     = {'pyreadline':['configuration/*']},
       data_files       = [('share/doc/pyreadline', glob.glob("doc/*")),
